@@ -1,5 +1,10 @@
 2018-05-16  Tom Tromey  <tom@tromey.com>
 
+	PR cli/22234:
+	* complaints.c: Emit \n.
+
+2018-05-16  Tom Tromey  <tom@tromey.com>
+
 	* symfile.c (symbol_file_add_with_addrs, symbol_file_clear)
 	(separate_debug_file_exists, find_separate_debug_file)
 	(add_symbol_file_command, reread_symbols, allocate_symtab)
